Add comprehensive unit tests, improving code coverage and reliability (#1)
* add unit test

* save init test progress

* save init test progress

* save init test progress

* fix for duplicate META-INF files

---------

Co-authored-by: RomanTsisyk <roman.tsisyk1@gmail.com>